# my-c-compiler

./: CMakeLists.txt
include/lexer/: lexer.hpp  token.hpp
src/lexer/: lexer.cpp
